--- a/trekbag/package.json
+++ b/trekbag/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
